# Esports

./: .gitignore  .gitmodules  README.md  package.json
sports-score-be/app/: .env  .gitignore  README.md  db.py  main.py  pyproject.toml
sports-score-be/app/models/: jwt.py  user.py
sports-score-be/app/repositories/: user_repo.py
sports-score-be/app/routes/: auth.py
sports-score-be/app/services/: auth_service.py
sports-score-be/app/utils/: jwt.py
sports-score-ui/: README.md  package-lock.json  package.json
sports-score-ui/src/: App.css  App.js  common.css  index.js
sports-score-ui/src/components/: MatchCard.js  Navbar.js  ScoreForm.js  StandingsTable.js  TeamCard.js
sports-score-ui/src/components/MatchCard/: MatchCard.css  MatchCard.js
sports-score-ui/src/components/Navbar/: Navbar.css  Navbar.js
sports-score-ui/src/components/ScoreForm/: ScoreForm.css  ScoreForm.js
sports-score-ui/src/components/StandingsTable/: StandingsTable.css  StandingsTable.js
sports-score-ui/src/components/TeamCard/: TeamCard.css  TeamCard.js
sports-score-ui/src/globalConfig/: apiConfig.js
sports-score-ui/src/globalConfig.js/: apiConfig.js
sports-score-ui/src/globalServices/: axiosConfig.js  service.js
sports-score-ui/src/hooks/: useLogin.js  useSignup.js
sports-score-ui/src/pages/: Article.js  Fixtures.js  Home.js  LiveScores.js  Login.js  MatchDetails.js  News.js  Players.js  Rankings.js  Scores.js  Signup.js  Standings.js  Stats.js  Teams.js
sports-score-ui/src/pages/Article/: Article.css  Article.js
sports-score-ui/src/services/: mockApi.js
(+22 files in other folders)
